--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   background-image: url('./Imgmental/people.jpg');
   padding: 70px;
   text-align: center;
+  height: 500px;
 }
 
 .header h1 {
